test/tests/stages/17_supporting_dynamic_memory_allocation/valid/void_pointer/explicit_cast.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[173]:
  void
  *
  identifier(malloc)
  (
  unsigned
  long
  identifier(size)
  )
  ;
  void
  identifier(free)
  (
  void
  *
  identifier(ptr)
  )
  ;
  void
  *
  identifier(memcpy)
  (
  void
  *
  identifier(s1)
  ,
  void
  *
  identifier(s2)
  ,
  unsigned
  long
  identifier(n)
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  void
  *
  identifier(ptr)
  =
  identifier(malloc)
  (
  const int(4)
  *
  sizeof
  (
  double
  )
  )
  ;
  double
  *
  identifier(double_ptr)
  =
  (
  double
  *
  )
  identifier(ptr)
  ;
  identifier(double_ptr)
  [
  const int(2)
  ]
  =
  const double(10.0)
  ;
  if
  (
  (
  void
  *
  )
  identifier(double_ptr)
  !=
  identifier(ptr)
  )
  {
  return
  const int(1)
  ;
  }
  double
  identifier(result)
  =
  identifier(double_ptr)
  [
  const int(2)
  ]
  ;
  if
  (
  identifier(result)
  !=
  const double(10.0)
  )
  {
  return
  const int(2)
  ;
  }
  unsigned
  long
  identifier(ul)
  =
  (
  unsigned
  long
  )
  identifier(ptr)
  ;
  if
  (
  identifier(ul)
  %
  const int(8)
  )
  {
  return
  const int(3)
  ;
  }
  identifier(free)
  (
  identifier(ptr)
  )
  ;
  long
  identifier(zero)
  =
  const int(0)
  ;
  identifier(ptr)
  =
  (
  void
  *
  )
  identifier(zero)
  ;
  if
  (
  identifier(ptr)
  )
  {
  return
  const int(4)
  ;
  }
  identifier(zero)
  =
  (
  long
  )
  identifier(ptr)
  ;
  if
  (
  identifier(zero)
  )
  {
  return
  const int(5)
  ;
  }
  return
  const int(0)
  ;
  }
