test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/scalar_expressions/not_void.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[33]:
  void
  identifier(f)
  (
  void
  )
  ;
  void
  identifier(g)
  (
  void
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  !
  (
  const int(1)
  ?
  identifier(f)
  (
  )
  :
  identifier(g)
  (
  )
  )
  ;
  }
